Auth system basic working | Stored username in profile | Day finished

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 
   # 🔥 API REQUESTS (Login, Signup, Profile)
   http: ^1.2.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
